fix: fix issues